# miniKen

./: .gitignore  README.md  install.sh  miniKen  start.sh
engine/: CMakeLists.txt  orchestrator.cpp  orchestrator.h  pitfalls  strategies
engine/compressor/: commentOut.cpp  commentOut.h  compactBlock.cpp  compactBlock.h
engine/compressor/prompts/: commentOut  compactBlock
engine/decompressor/: relaxCommentOut.cpp  relaxCommentOut.h  relaxCompactBlock.cpp  relaxCompactBlock.h  relaxTextual.cpp  relaxTextual.h
engine/decompressor/prompts/: relaxCommentOut  relaxCompactBlock  relaxTextual
engine/parser/: cProfile.h  cppProfile.cpp  cppProfile.h  languageProfile.h  languageRegistry.cpp  languageRegistry.h  querySquasher.cpp  querySquasher.h  responseBuilder.cpp  responseBuilder.h
engine/parser/profiles/: cProfile.cpp  cProfile.h  cppProfile.h  goProfile.cpp  goProfile.h  pythonProfile.cpp  pythonProfile.h
engine/parser/prompts/: querySquasher  responseBuilder
engine/prompts/: orchestrator
engine/sessionStore/: sessionMapObject.cpp  sessionMapObject.h
engine/sessionStore/prompts/: sessionMapObject
engine/static/: prompt_format
interface/prompts/: web-interface
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/public/: index.html
mcp-server/src/: index.ts  queryHandler.ts  webServer.ts
testbed/: CMakeLists.txt  testRunner.h
testbed/cli/: miniken.cpp
testbed/performance/: benchmark.cpp
testbed/stages/cpp/: compressed.cpp  decompressed.cpp  generate.cpp  original.cpp
testbed/stages/java/: compressed.java  decompressed.java  original.java
testbed/stages/javascript/: compressed.js  decompressed.js  original.js
testbed/stages/python/: compressed.py  decompressed.py  original.py
testbed/tests/: run_all.sh  test_compressor.cpp  test_decompressor.cpp  test_orchestrator.cpp  test_parser.cpp  test_sessionMapObject.cpp
testbed_build/: CMakeCache.txt  Makefile  cmake_install.cmake  test_compressor  test_decompressor  test_sessionMapObject
testbed_build/engine_build/: Makefile  cmake_install.cmake
